ui: fix mobile layout bugs
* Removes white line on the right that was appearing due to `gutter`'s
negative margins

* Removes grey line between collections menu and sticky header.(It is a
workaround for now)

(Also corrects content-policy url)

--- a/ui/src/common/layouts/Header/Header.scss
+++ b/ui/src/common/layouts/Header/Header.scss
@@ -15,7 +15,7 @@
 
       @media (max-width: $screen-xs-max) {
         line-height: 56px;
-        height: initial; // unset height for mobile
+        height: auto; // unset height for mobile
       }
     }
 
@@ -28,8 +28,10 @@
     background-color: $layout-header-background;
 
     // remove the margin top for mobile
+    // because .sticky is not stick anymore
     @media (max-width: $screen-xs-max) {
-      margin-top: 0 !important;
+      margin-top: -1px !important;
+      padding-top: 1px;
     }
   }
 }
